--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my webite</title>
   </head>
-  <body></body>
+  <body>
+    <div id="wrap">
+      <header>
+        <div class="container">
+          <div id="logo"><a href="#">Reinexxism</a></div>
+          <nav>
+            <ul class="menu">
+              <li class="list1">Who am I ?</li>
+              <li class="list2">About Me</li>
+              <li class="list3">Project</li>
+              <li class="list4">Contact</li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
