modify home rayout

--- a/index.html
+++ b/index.html
@@ -4,23 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to my webite</title>
+    <title>MY UNIVERSE</title>
   </head>
   <body>
     <div id="wrap">
-      <header>
+      <!-- HOME 부분 -->
+      <main>
         <div class="container">
-          <div id="logo"><a href="#">Reinexxism</a></div>
-          <nav>
-            <ul class="menu">
-              <li class="list1">Who am I ?</li>
-              <li class="list2">About Me</li>
-              <li class="list3">Project</li>
-              <li class="list4">Contact</li>
-            </ul>
-          </nav>
+          <section class="left-section">
+            <div id="logo">
+              <a href="#">PORTFOLIO</a>
+            </div>
+          </section>
+          <section class="right-section">
+            <div id="home_nav">
+              <nav>
+                <ul class="home_nav_ul">
+                  <li class="home_nav_ul_li">HOME</li>
+                  <li class="home_nav_ul_li">ABOUT</li>
+                  <li class="home_nav_ul_li">WORKS</li>
+                  <li class="home_nav_ul_li">BLOG</li>
+                  <li class="home_nav_ul_li">CONTACT</li>
+                </ul>
+              </nav>
+            </div>
+            <div class="home_img">
+              <img src="" alt="" />
+            </div>
+            <div class="home_text">
+              <h2 class="home_text_name">
+                MY NAME IS <br /><span>CHOI JOO HYUN</span>
+              </h2>
+              <p class="home_text_role">I'M A UI.UX DEVELOPER</p>
+            </div>
+          </section>
         </div>
-      </header>
+      </main>
     </div>
   </body>
 </html>
