add global color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <h2 class="home_text_name">
                 MY NAME IS <br /><span>CHOI JOO HYUN</span>
               </h2>
-              <p class="home_text_role">I'M A UI.UX DEVELOPER</p>
+              <p class="home_text_role">I'M A FRONTEND DEVELOPER</p>
             </div>
           </section>
         </div>
