first clear of html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     <div id="wrap">
       <!-- HOME 부분 -->
-      <main>
+      <section id="home">
         <div class="container">
-          <section class="left-section">
-            <div id="logo">
-              <a href="#">PORTFOLIO</a>
+          <div class="home_left">
+            <div id="home_logo">
+              <img src="" alt="" class="home_logo_img" />
+              <a href="#" class="home_logo_text">PORTFOLIO</a>
             </div>
-          </section>
-          <section class="right-section">
+          </div>
+          <div class="home_right">
             <div id="home_nav">
               <nav>
                 <ul class="home_nav_ul">
@@ -37,9 +38,136 @@
               </h2>
               <p class="home_text_role">I'M A FRONTEND DEVELOPER</p>
             </div>
-          </section>
+          </div>
         </div>
-      </main>
+      </section>
+
+      <!-- ABOUT 부분 -->
+      <section id="about">
+        <div class="container">
+          <h2 class="section_title">ABOUT ME</h2>
+          <div class="about-left">
+            <div class="about-left_img">
+              <img src="" alt="" />
+            </div>
+            <div class="about-left_text">
+              <p>about description 1</p>
+            </div>
+          </div>
+          <div class="about-right">
+            <div class="about-right_text">
+              <p>about description 2</p>
+            </div>
+            <div class="about-right_img">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- WORK 부분 -->
+      <section id="work">
+        <div class="container">
+          <h2 class="section_title">MY WORKS</h2>
+          <p class="section_description">description about my works</p>
+          <div class="work_project">
+            <a href="#" class="project" type="blank">
+              <img src="#" alt="" />
+              <div class="work_description">
+                <p>project1</p>
+              </div>
+            </a>
+            <a href="#" class="project" type="blank">
+              <img src="#" alt="" />
+              <div class="work_description">
+                <p>project2</p>
+              </div>
+            </a>
+            <a href="#" class="project" type="blank">
+              <img src="#" alt="" />
+              <div class="work_description">
+                <p>project3</p>
+              </div>
+            </a>
+            <a href="#" class="project" type="blank">
+              <img src="#" alt="" />
+              <div class="work_description">
+                <p>project4</p>
+              </div>
+            </a>
+            <a href="#" class="project" type="blank">
+              <img src="#" alt="" />
+              <div class="work_description">
+                <p>project5</p>
+              </div>
+            </a>
+            <a href="#" class="project" type="blank">
+              <img src="#" alt="" />
+              <div class="work_description">
+                <p>project6</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- BLOG 부분 -->
+      <section id="blog">
+        <div class="container">
+          <div class="blog_title_box">
+            <h2 class="section_title">MY BLOG</h2>
+          </div>
+          <div class="first-blog">
+            <div class="first-blog_img">
+              <img src="" alt="" />
+            </div>
+            <div class="first-blog_des">
+              <p>first des of blog(1)</p>
+            </div>
+          </div>
+          <div class="second-blog">
+            <div class="second-blog_img">
+              <img src="" alt="" />
+            </div>
+            <div class="second-blog_des">
+              <p>second des of blog(2)</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- CONTACT ME 부분 -->
+      <section id="contact">
+        <div class="container">
+          <h2 class="section_title">CONTACT ME</h2>
+          <div class="contact-left">
+            <div class="contact-left_up">
+              <div class="contact-left_up_title">
+                <p>Phone Number</p>
+              </div>
+              <div class="contact-left_up_number">
+                <p>010 - 6686 - 4089</p>
+              </div>
+            </div>
+            <div class="contact-left_down">
+              <div class="contact-left_down_title">
+                <p>Email</p>
+              </div>
+              <div class="contact-left_down_address">
+                <p>lucy@naver.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="contact-right">
+            <div class="contact-right_img">
+              <img src="" alt="" />
+            </div>
+            <div class="contact-right_des">
+              <p>bye bye</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
