--- a/index.html
+++ b/index.html
@@ -5,42 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY UNIVERSE</title>
+    <link rel="icon" href="img/logo/logo_crown.png" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="wrap">
       <!-- HOME 부분 -->
       <section id="home">
         <div class="container">
-          <div class="home_left">
-            <div id="home_logo">
-              <img src="" alt="" class="home_logo_img" />
-              <a href="#" class="home_logo_text">PORTFOLIO</a>
+          <div class="home_flexbox">
+            <div class="home-left">
+              <div id="home_logo">
+                <img src="" alt="" class="home_logo_img" />
+                <a href="#" class="home_logo_text">PORTFOLIO</a>
+              </div>
+            </div>
+            <div class="home-right">
+              <div id="home_nav">
+                <nav>
+                  <ul class="home_nav_ul">
+                    <li class="home_nav_ul_li">HOME</li>
+                    <li class="home_nav_ul_li">ABOUT</li>
+                    <li class="home_nav_ul_li">WORKS</li>
+                    <li class="home_nav_ul_li">BLOG</li>
+                    <li class="home_nav_ul_li">CONTACT</li>
+                  </ul>
+                </nav>
+              </div>
+              <div class="home-right_img">
+                <img src="" alt="" />
+              </div>
             </div>
           </div>
-          <div class="home_right">
-            <div id="home_nav">
-              <nav>
-                <ul class="home_nav_ul">
-                  <li class="home_nav_ul_li">HOME</li>
-                  <li class="home_nav_ul_li">ABOUT</li>
-                  <li class="home_nav_ul_li">WORKS</li>
-                  <li class="home_nav_ul_li">BLOG</li>
-                  <li class="home_nav_ul_li">CONTACT</li>
-                </ul>
-              </nav>
-            </div>
-            <div class="home_img">
-              <img src="" alt="" />
-            </div>
-            <div class="home_text">
-              <h2 class="home_text_name">
-                MY NAME IS <br /><span>CHOI JOO HYUN</span>
-              </h2>
-              <p class="home_text_role">I'M A FRONTEND DEVELOPER</p>
-            </div>
+          <div class="home_text">
+            <h2 class="home_text_name">
+              MY NAME IS <br /><span>CHOI JOO HYUN</span>
+            </h2>
+            <p class="home_text_role">I'M A FRONTEND DEVELOPER</p>
           </div>
         </div>
       </section>
+
+      <!-- New nav 부분-->
+      <nav id="new_nav">
+        <ul class="new_nav_ul">
+          <li class="new_nav_ul_li">HOME</li>
+          <li class="new_nav_ul_li">ABOUT</li>
+          <li class="new_nav_ul_li">WORKS</li>
+          <li class="new_nav_ul_li">BLOG</li>
+          <li class="new_nav_ul_li">CONTACT</li>
+        </ul>
+      </nav>
 
       <!-- ABOUT 부분 -->
       <section id="about">
