동훈오빠가 id 뺴라고 함

--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
               </div>
             </div>
             <div class="home-right">
-              <div id="home_nav">
-                <nav>
-                  <ul class="home_nav_ul">
-                    <li class="home_nav_ul_li">HOME</li>
-                    <li class="home_nav_ul_li">ABOUT</li>
-                    <li class="home_nav_ul_li">WORKS</li>
-                    <li class="home_nav_ul_li">BLOG</li>
-                    <li class="home_nav_ul_li">CONTACT</li>
-                  </ul>
-                </nav>
-              </div>
+              <nav id="home_nav">
+                <ul class="home_nav_ul">
+                  <li class="home_nav_ul_li">HOME</li>
+                  <li class="home_nav_ul_li">ABOUT</li>
+                  <li class="home_nav_ul_li">WORKS</li>
+                  <li class="home_nav_ul_li">BLOG</li>
+                  <li class="home_nav_ul_li">CONTACT</li>
+                </ul>
+              </nav>
               <div class="home-right_img">
                 <img src="" alt="" />
               </div>
