final home css and add about css

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="home-right">
               <nav id="home_nav">
                 <ul class="home_nav_ul">
-                  <li class="home_nav_ul_li">HOME</li>
-                  <li class="home_nav_ul_li">ABOUT</li>
-                  <li class="home_nav_ul_li">WORKS</li>
-                  <li class="home_nav_ul_li">BLOG</li>
-                  <li class="home_nav_ul_li">CONTACT</li>
+                  <li class="home_nav_ul_li"><a href="#">HOME</a></li>
+                  <li class="home_nav_ul_li"><a href="#">ABOUT</a></li>
+                  <li class="home_nav_ul_li"><a href="#">WORKS</a></li>
+                  <li class="home_nav_ul_li"><a href="#">BLOG</a></li>
+                  <li class="home_nav_ul_li"><a href="#">CONTACT</a></li>
                 </ul>
               </nav>
               <div class="home-right_img">
@@ -45,7 +45,7 @@
       </section>
 
       <!-- New nav 부분-->
-      <nav id="new_nav">
+      <!-- <nav id="new_nav">
         <ul class="new_nav_ul">
           <li class="new_nav_ul_li">HOME</li>
           <li class="new_nav_ul_li">ABOUT</li>
@@ -53,12 +53,12 @@
           <li class="new_nav_ul_li">BLOG</li>
           <li class="new_nav_ul_li">CONTACT</li>
         </ul>
-      </nav>
+      </nav> -->
 
       <!-- ABOUT 부분 -->
       <section id="about">
         <div class="container">
-          <h2 class="section_title">ABOUT ME</h2>
+          <h2 class="section_title">ABOUT <span>ME</span></h2>
           <div class="about-left">
             <div class="about-left_img">
               <img src="" alt="" />
