color조합 어케 하지

--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
       <!-- WORK 부분 -->
       <section id="work">
         <div class="container">
-          <h2 class="section_title">MY WORKS</h2>
-          <p class="section_description">description about my works</p>
+          <div class="work_header">
+            <h2 class="section_title">MY WORKS</h2>
+            <p class="section_description">description about my works</p>
+          </div>
           <div class="work_project">
             <a href="#" class="project" type="blank">
               <img src="#" alt="" />
